fix(forms): compact layout alignment fixes

--- a/projects/angular/src/forms/styles/_containers.clarity.scss
+++ b/projects/angular/src/forms/styles/_containers.clarity.scss
@@ -188,7 +188,11 @@
     .clr-error,
     .clr-success {
       .clr-subtext {
-        margin-left: 0;
+        margin-left: tokens.$cds-global-space-3;
+      }
+      .clr-subtext.error,
+      .clr-subtext.success {
+        margin-left: tokens.$cds-global-space-4;
       }
 
       // Center the validation icon
